--- a/.gitignore
+++ b/.gitignore
@@ -175,4 +175,8 @@ out/
 logs/
 
 # Folder that has CTRE Phoenix Sim device config storage
-ctre_sim/
+
+# Simulator files:
+networktables.json
+simgui-ds.json
+simgui.json
